--- a/index.html
+++ b/index.html
@@ -557,11 +557,11 @@
 
         <div class="row">
           <div class="col-md-6 col-12 d-flex flex-column align-items-center">
-            <h5 class="text-center">Suivi 3</h5>
+            <h5 class="text-center">Suivi Recyclage Broyeur</h5>
             <canvas class="my-4 w-100" id="myChart7"></canvas>
           </div>
           <div class="col-md-6 col-12 d-flex flex-column align-items-center">
-            <h5 class="text-center">Suivi 4</h5>
+            <h5 class="text-center">Suivi Recyclage Nettoyage</h5>
             <canvas class="my-4 w-100" id="myChart8"></canvas>
           </div>
         </div>
